Update Page Not found page

--- a/client/src/locales/en/translation.json
+++ b/client/src/locales/en/translation.json
@@ -2,9 +2,8 @@
     "pageNotFound": {
         "title": "Page Not Found",
         "content": "Page Not Found",
-        "page-not-found": "Page Not Found",
-        "intro": "The page you are looking for does not exist.\nTrying again or go back to WAX DeFi homepage.",
-        "go-to-home-page": "Go to homepage"
+        "page not found": "Page Not Found",
+        "reload page": "Reload Page"
     },
     "home": {
         "play game": "PLAY GAME",
