Add Game list component Add Create new game function Add custom component(Input, etc)

--- a/client/src/locales/en/translation.json
+++ b/client/src/locales/en/translation.json
@@ -6,9 +6,29 @@
         "reload page": "Reload Page"
     },
     "home": {
-        "play game": "PLAY GAME",
+        "play game": "PLAY GAME"
+    },
+    "gameList": {
         "game list": "GAME LIST",
-        "new game": "New Game"
+        "new game": "NEW GAME",
+        "host": "Host",
+        "id": "ID",
+        "challenger": "Challenger",
+        "end": "End",
+        "turn": "Turn",
+        "view": "View",
+        "play now": "Play Now"
+    },
+    "create new game": {
+        "new game": "New Game",
+        "play with bot": "Play with Bot",
+        "play with player":"Play with Player",
+        "challenger": "Challenger",
+        "create new game": "Create New Game",
+        "fail to create new game": "Fail to create new game",
+        "game is creating": "Game is creating. Go to game list",
+        "your game id": "Your game id: ",
+        "require player": "Require Player"
     },
     "loading": "Loading..."
 }
