Automatically reload game Add game link when create new game successfully

--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -45,5 +45,6 @@
     "loading": "Loading...",
     "no game found": "No Game Found",
     "require login": "Require Login",
-    "turn": "Turn"
+    "turn": "Turn",
+    "winner": "winner"
 }
